# GausSN

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fit_batch.py  fit_glsn.py  pyproject.toml  requirements.txt  run_batch.py  run_batch_roman.py  setup.py
.github/workflows/: testing-and-coverage.yml
GausSN/: gausSN.py  kernels.py  lensingmodels.py  meanfuncs.py  utils.py
GausSN/absolutes/: absolutes.ref  absolutes_Rodney12.ref
benchmarks/: asv.conf.json  benchmarks.py
data/COSMOGRAIL/: DES_J0408-5354.txt
data/glSN_forGP_sims/: simSN_10.csv  simSN_106.csv  simSN_107.csv  simSN_11.csv  simSN_110.csv  simSN_115.csv  simSN_116.csv  simSN_120.csv  simSN_121.csv  simSN_125.csv  simSN_126.csv  simSN_127.csv  simSN_131.csv  simSN_134.csv  simSN_135.csv  simSN_139.csv  simSN_147.csv  simSN_150.csv  simSN_152.csv  simSN_153.csv  simSN_156.csv  simSN_170.csv  simSN_172.csv  simSN_175.csv  simSN_185.csv  simSN_186.csv  simSN_187.csv  simSN_188.csv  simSN_189.csv  simSN_19.csv  simSN_194.csv  simSN_195.csv  simSN_198.csv  simSN_2.csv  simSN_20.csv  simSN_25.csv  simSN_33.csv  simSN_34.csv  simSN_44.csv  simSN_47.csv  (+11 more)
docs/: conf.py  index.rst
gaussn/: gausSN.py  kernels.py  lensingmodels.py  meanfuncs.py  utils.py
ipynb/: fit_yse.ipynb  fitting_SLSN_example.ipynb  fitting_glQSO_example.ipynb  getting_started.ipynb
ipynb/.ipynb_checkpoints/: getting_started-checkpoint.ipynb
ipynb/stylesheet/: GausSN.mplstyle
output_files/glSN_forGP_sims/: simSN_0.csv  simSN_1.csv  simSN_100.csv  simSN_101.csv  simSN_102.csv  simSN_103.csv  simSN_104.csv  simSN_105.csv  simSN_108.csv  simSN_109.csv  simSN_111.csv  simSN_112.csv  simSN_113.csv  simSN_114.csv  simSN_117.csv  simSN_118.csv  simSN_119.csv  simSN_12.csv  simSN_122.csv  simSN_123.csv  simSN_124.csv  simSN_128.csv  simSN_129.csv  simSN_13.csv  simSN_130.csv  simSN_132.csv  simSN_133.csv  simSN_136.csv  simSN_137.csv  simSN_138.csv  simSN_14.csv  simSN_140.csv  simSN_141.csv  simSN_142.csv  simSN_143.csv  simSN_144.csv  simSN_145.csv  simSN_146.csv  simSN_148.csv  simSN_149.csv  (+109 more)
output_files/glSN_forGP_sims/multiband_fits/: multiband_dict.npy
py/: gausSN.py  kernels.py  lensingmodels.py  meanfuncs.py
tests/gaussn/: test_example_module.py
